@@ -11,7 +11,7 @@
 typedef struct{int x,y;}ipoint;
 ipoint ipts1[]={{1,2},{3,4}};
 
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct vararg parameters are supported for these ports!
+#if !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
 static int va1(int nargs,ipoint i,...);
 
 void
@@ -31,13 +31,13 @@ f2 (void)
 
 void testBug(void)
 {
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct vararg parameters are supported for these ports!
+#if !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
 	f1();
 	f2();
 #endif
 }
 
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct vararg parameters are supported for these ports!
+#if !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
 static int va1(int nargs,ipoint i1,...)
 {
 	va_list args;
